k8s/infrastructure/monitoring/victoria-logs/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  namespace: victoria-logs
spec:
  parentRefs:
    - {namespace: gateway, name: internal, sectionName: https-wc-talmox-hera-home-karlsen-fr}
  hostnames: [victorialogs.talmox.hera.home.karlsen.fr]
  rules:
    - matches: [path: {type: PathPrefix, value: /}]
      backendRefs: [{name: victoria-logs-victoria-logs-single, kind: Service, port: 9428}]
